Bug 397349 - PgUp/PgDown doesn't work in message preview
Summary: PgUp/PgDown doesn't work in message preview
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-10 14:56 UTC by Karsten Künne
Modified: 2018-10-25 08:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karsten Künne 2018-08-10 14:56:22 UTC
In kmail-17.12.3 (Opensuse Leap 15.0) the PgUp/PgDown keys are broken in the message preview. They only scroll the message one page and no more. If I scroll down further with the arrow key or mouse and then hit PgDown it actually goes UP to more or less one page down from the top. This is new in this version, version 17.04.2 (Opensuse 42.3) was working correctly.
Comment 1 Laurent Montel 2018-08-17 05:37:30 UTC
it was fixed in 18.04.x
Comment 2 Wolfgang Bauer 2018-10-24 10:05:37 UTC
(In reply to Laurent Montel from comment #1)
> it was fixed in 18.04.x

Yes and no.

This problem originally was caused by a change in QtWebEngine 5.10.
That has been fixed (in 17.12.1) by https://cgit.kde.org/messagelib.git/commit/?h=Applications/17.12&id=ddbdf9b33c6279b0a2ff29a7b67b0044762a258d
That in turn broke things with QtWebEngine 5.9, so a version check was added:
https://cgit.kde.org/messagelib.git/commit/?h=Applications/17.12&id=155647759daf413aba208011004a23ecbda7de60

The problem now is that this checks the Qt version, not the version of QtWebEngine as it should IMHO.
And openSUSE Leap 15.0 comes with Qt 5.9.4 (which is LTS), but also QtWebEngine 5.10.1 (for security reasons), so it's broken there.

I uploaded a patch to phabricator:
https://phabricator.kde.org/D16398
Comment 3 Wolfgang Bauer 2018-10-24 22:07:13 UTC
Git commit 569c3780a8f18830d7be24b7a7d40b755a2dbc60 by Wolfgang Bauer.
Committed on 24/10/2018 at 22:03.
Pushed by wbauer into branch 'Applications/18.08'.

Check QtWebEngine version instead of Qt's

This code depends on the QtWebEngine (not Qt) version, so it should
actually check for that.

Otherwise it breaks if a distribution ships Qt 5.9 LTS together with a
newer QtWebEngine, like e.g. openSUSE Leap 15.0 does, or QtWebEngine
5.9 together with a newer Qt as is the case in FreeBSD.
Related: bug 388440
FIXED-IN: 18.08.3
Differential Revision: https://phabricator.kde.org/D16398

M  +2    -1    webengineviewer/src/webenginescript.cpp

https://commits.kde.org/messagelib/569c3780a8f18830d7be24b7a7d40b755a2dbc60
Comment 4 Wolfgang Bauer 2018-10-25 08:41:32 UTC
FYI, I submitted an update for openSUSE Leap 15.0 as well, should get released in about a week I think.