Check QtWebEngine version instead of Qt's

This code depends on the QtWebEngine (not Qt) version, so it should
actually check for that.

Otherwise it breaks if a distribution ships Qt 5.9 LTS together with a
newer QtWebEngine, like e.g. openSUSE Leap 15.0 does, or QtWebEngine
5.9 together with a newer Qt as is the case in FreeBSD.

BUG: 397349
CCBUG: 388440
FIXED-IN: 18.08.3
Differential Revision: https://phabricator.kde.org/D16398